# orc-vs-elf

./: README.md  test.sh
backend/: pyproject.toml
backend/app/: gpt.py  main.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
